[package]
name = "bloom"
version = "0.1.0"
authors = ["axs <axs@tt.t>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bloom"
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
bloom = "0.3.2"
